<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".RegistrationPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="144dp"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".RegistrationPage">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_upper"
            android:layout_width="415dp"
            android:layout_height="49dp"
            android:layout_marginTop="4dp"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom|center"
            android:text="@string/email_address_reg"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom|center"
            android:text="@string/create_password"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom|center"
            android:text="@string/repeat_password"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="397dp"
            android:layout_height="150dp"
            android:layout_weight="0"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom"
            android:text="@string/final_legend"
            android:textAlignment="gravity"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#FFFFFF"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_button_background"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="58dp"
        android:layout_marginTop="21dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="right"
        android:text="@string/next_string"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints,SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>



